--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ ext {
     dagger = "2.14.1"
     retrofit = "2.3.0"
     ankoVersion = "0.10.4"
+    glide = "4.6.1"
 }
 
 
@@ -126,6 +127,10 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger"
     kaptAndroidTest "com.google.dagger:dagger-android-processor:$dagger"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide"
+    kapt "com.github.bumptech.glide:compiler:$glide"
 
     testImplementation "org.mockito:mockito-core:2.15.0"
     testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
