--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,9 @@
             android:name="com.duckduckgo.app.onboarding.ui.OnboardingActivity"
             android:label="@string/appName" />
 
-
         <activity
             android:name=".BrowserActivity"
+            android:theme="@style/BrowserTheme"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|stateHidden">
@@ -66,6 +66,10 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name="com.duckduckgo.app.tabs.ui.TabSwitcherActivity"
+            android:label="@string/tabActivityTitle" />
 
         <activity
             android:name="com.duckduckgo.app.privacy.ui.PrivacyDashboardActivity"
