UI and keyboard interaction improvements
* Update libraries and add android-ktx

* Replace `match_parent` with `0dp` which *might* because of toolbar bug

The toolbar occasionally stops filling the entire width, and it might be because of this. View immediately under a ConstraintLayout should not use `match_parent`, as per official docs (https://developer.android.com/reference/android/support/constraint/ConstraintLayout.html#RelativePositioning)

* Remove excessive margin from logo guideline

* Make DDG logo animate with the keyboard

* Clean up keyboard interactions including hiding keyboard when popup menu accessed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,9 @@ android {
 }
 
 ext {
-    supportLibrary = "27.0.2"
+    supportLibrary = "27.1.0"
     architectureComponents = "1.0.0"
+    architectureComponentsExtensions = "1.1.0"
     dagger = "2.14.1"
     retrofit = "2.3.0"
     ankoVersion = "0.10.4"
@@ -113,8 +114,11 @@ dependencies {
     implementation "org.jetbrains.anko:anko-commons:$ankoVersion"
     implementation "org.jetbrains.anko:anko-design:$ankoVersion"
 
+    // Android KTX
+    implementation 'androidx.core:core-ktx:0.2'
+
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:$architectureComponents"
+    implementation "android.arch.lifecycle:extensions:$architectureComponentsExtensions"
     kapt "android.arch.lifecycle:compiler:$architectureComponents"
     testImplementation "android.arch.core:core-testing:$architectureComponents"
     androidTestImplementation "android.arch.core:core-testing:$architectureComponents"
