--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         </activity>
         <activity
             android:name="com.duckduckgo.app.onboarding.ui.OnboardingActivity"
+            android:theme="@style/AppTheme.TransparentTheme"
             android:label="@string/appName" />
         <activity
             android:name=".BrowserActivity"
