--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,22 +32,21 @@
         <activity
             android:name="com.duckduckgo.app.launch.LaunchActivity"
             android:label="@string/appName">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.duckduckgo.app.onboarding.ui.OnboardingActivity"
+            android:theme="@style/AppTheme.TransparentTheme"
             android:label="@string/appName" />
-
         <activity
             android:name=".BrowserActivity"
-            android:theme="@style/BrowserTheme"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
+            android:theme="@style/BrowserTheme"
             android:windowSoftInputMode="adjustResize|stateHidden">
 
             <!-- Allows app to become default browser -->
@@ -64,22 +63,22 @@
             <!-- Allows apps to consume links and text shared from other apps e.g chrome -->
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/plain" />
             </intent-filter>
 
             <!-- Allow app to be default assistant -->
             <intent-filter>
                 <action android:name="android.intent.action.ASSIST" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name="com.duckduckgo.app.tabs.ui.TabSwitcherActivity"
             android:label="@string/tabActivityTitle" />
-
         <activity
             android:name="com.duckduckgo.app.privacy.ui.PrivacyDashboardActivity"
             android:label="@string/privacyDashboardActivityTitle"
@@ -99,7 +98,6 @@
         <activity
             android:name="com.duckduckgo.app.settings.SettingsActivity"
             android:label="@string/settingsActivityTitle" />
-
         <activity
             android:name="com.duckduckgo.app.about.AboutDuckDuckGoActivity"
             android:label="@string/aboutActivityTitle"
@@ -123,6 +121,9 @@
                 android:resource="@xml/search_widget_info" />
         </receiver>
 
+        <activity
+            android:name=".defaultBrowsing.DefaultBrowserInfoActivity"
+            android:theme="@style/Theme.AppCompat.Translucent" />
     </application>
 
 </manifest>
