--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "app/libs/OnionKit"]
-	path = app/libs/OnionKit
-	url = https://github.com/guardianproject/NetCipher.git
+[submodule "app/src/main/cpp/third-party/bloom_cpp"]
+	path = app/src/main/cpp/third-party/bloom_cpp
+	url = git@github.com:duckduckgo/bloom_cpp.git
+	branch = feature/initial_filter
