Update submodule to use https to see if BitRise copes with this better

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "app/src/main/cpp/third-party/bloom_cpp"]
 	path = app/src/main/cpp/third-party/bloom_cpp
-	url = git@github.com:duckduckgo/bloom_cpp.git
+	url = https://github.com/duckduckgo/bloom_cpp.git
 	branch = feature/initial_filter
