Large scale https upgrades (#314)
* Remove old https solution and replace with large-scale https with bloom filter
* Add db migration including deletion of old records
* Move 3rd party libs into correct folder
* Add transaction for full db updates (where we delete then insert new records) of https whitelist and tracker entries
* Make queries more case consistent across
* Increase architecture components to 1.1.1. This fixes room migration bug. See May 16 2018 release notes (1.1.1 is identical to 1.1.1-rc1) https://developer.android.com/jetpack/docs/release-notes
* Update gradle tooling
* Update BitRise config to include avd version

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -18,12 +18,23 @@ add_library( # Sets the name of the library.
 
              # Provides a relative path to your source file(s).
              src/main/cpp/adblockclient-lib.cpp
-             src/main/cpp/ad-block/ad_block_client.cc
-             src/main/cpp/ad-block/cosmetic_filter.cc
-             src/main/cpp/ad-block/filter.cc
-             src/main/cpp/bloom-filter-cpp/BloomFilter.cpp
-             src/main/cpp/bloom-filter-cpp/hashFn.cpp
-             src/main/cpp/hashset-cpp/HashSet.cpp
+             src/main/cpp/third-party/ad-block/ad_block_client.cc
+             src/main/cpp/third-party/ad-block/cosmetic_filter.cc
+             src/main/cpp/third-party/ad-block/filter.cc
+             src/main/cpp/third-party/bloom-filter-cpp/BloomFilter.cpp
+             src/main/cpp/third-party/bloom-filter-cpp/hashFn.cpp
+             src/main/cpp/third-party/hashset-cpp/HashSet.cpp
+            )
+
+add_library( # Sets the name of the library.
+             https-bloom-lib
+
+             # Sets the library as a shared library.
+             SHARED
+
+             # Provides a relative path to your source file(s).
+             src/main/cpp/https-bloom-lib.cpp
+             src/main/cpp/third-party/bloom_cpp/src/BloomFilter.cpp
             )
 
 # Searches for a specified prebuilt library and stores the path as a
