--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ ext {
     ankoVersion = "0.10.4"
     glide = "4.6.1"
     androidTestRunner = "1.0.2"
+    lottieVersion = "2.6.0-beta19"
 }
 
 
@@ -139,6 +140,9 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide"
     kapt "com.github.bumptech.glide:compiler:$glide"
+
+    // Lottie
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
     // Apache commons
     implementation 'org.apache.commons:commons-math3:3.6.1'
