--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ android {
 }
 
 ext {
-    supportLibrary = "27.1.1"
+    supportLibrary = "28.0.0-beta01"
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
     androidKtx = "0.3"
