Potential interim solution for clearing process on 🔥 button press

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ ext {
 
 
 dependencies {
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
