Move fire process name to strings resources

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -134,7 +134,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fire"
             android:theme="@style/SplashTheme"
-            android:process=":fire" />
+            android:process="@string/fireProcessName" />
     </application>
 
 </manifest>
