--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,7 +130,7 @@
             android:theme="@style/ModalCardTheme" />
 
         <activity
-            android:name="com.duckduckgo.app.fire.FireSplashActivity"
+            android:name="com.duckduckgo.app.fire.FireActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fire"
             android:theme="@style/SplashTheme"
