--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ android {
 }
 
 ext {
-    supportLibrary = "28.0.0-beta01"
+    supportLibrary = "28.0.0-rc01"
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
     androidKtx = "0.3"
@@ -91,7 +91,7 @@ ext {
 
 
 dependencies {
-    implementation 'com.android.support:support-v4:28.0.0-rc01'
+    implementation "com.android.support:support-v4:$supportLibrary"
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
