Feature/fire button visited sites fix (#332)
* Update AGP to latest beta

* Update to support library 28 to match target API version

Requires a few tweaks along the way, mainly around nullability of variables

* Potential interim solution for clearing process on 🔥 button press

* Add competing process-restart implementations

* Remove FireActivity approach to restarting app process

* Move fire process name to strings resources

* Add Lottie to project

* Add flame animation

* Remove fire splash activity layer list

* Fix BrowserActivity menu xml reference

* Show toast upon re-entering app after fire animation

* Configure FireSplashActivity to show Lottie fire animation

* Rename FireSplashActivity to FireActivity

* Subclass FireActivity from AppCompatActivity to avoid dagger binding

* Re-center animation vertically

* Update bitrise.yml with latest config using VDT

* Update to latest AGP plugin

* Ensure FireActivity doesn't re-spawn Browser if user navigates away

* Code tidy

* Tidy up manifest and strings file to remove redundant label

* Code formatting

* Code formatting

* Remove unused styles and colours

* Clear data pixel fired when app restarted; avoid being killed mid-flight

* Rename method to `triggerRestart`

* Code format

* Removed redundant adapter class as one is already provided

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
         <meta-data
             android:name="android.webkit.WebView.MetricsOptOut"
             android:value="true" />
@@ -38,12 +37,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name="com.duckduckgo.app.onboarding.ui.OnboardingActivity"
-            android:theme="@style/AppTheme.TransparentTheme"
-            android:label="@string/appName" />
+            android:label="@string/appName"
+            android:theme="@style/AppTheme.TransparentTheme" />
         <activity
             android:name=".BrowserActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -130,6 +128,11 @@
         <activity
             android:name=".defaultBrowsing.DefaultBrowserInfoActivity"
             android:theme="@style/ModalCardTheme" />
+
+        <activity
+            android:name="com.duckduckgo.app.fire.FireActivity"
+            android:process="@string/fireProcessName"
+            android:theme="@style/SplashTheme" />
     </application>
 
 </manifest>
