Add mock web server dependency for tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ ext {
     glide = "4.6.1"
     androidTestRunner = "1.0.2"
     lottieVersion = "2.6.0-beta19"
+    okHttp = "3.10.0"
 }
 
 
@@ -100,7 +101,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$supportLibrary"
     implementation "com.android.support:design:$supportLibrary"
     implementation "com.android.support.constraint:constraint-layout:1.1.0"
-    implementation "com.squareup.okhttp3:okhttp:3.10.0"
+    implementation "com.squareup.okhttp3:okhttp:$okHttp"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
@@ -157,6 +158,7 @@ dependencies {
     androidTestUtil "com.android.support.test:orchestrator:1.0.2"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
     androidTestImplementation "org.mockito:mockito-android:2.15.0"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okHttp"
     androidTestImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
 
 }
