--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/appName"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme.Dark"
         tools:ignore="GoogleAppIndexingWarning">
         <meta-data
             android:name="android.webkit.WebView.MetricsOptOut"
@@ -98,7 +98,8 @@
             android:parentActivityName="com.duckduckgo.app.privacy.ui.PrivacyDashboardActivity" />
         <activity
             android:name="com.duckduckgo.app.settings.SettingsActivity"
-            android:label="@string/settingsActivityTitle" />
+            android:label="@string/settingsActivityTitle"
+            android:parentActivityName=".BrowserActivity" />
         <activity
             android:name="com.duckduckgo.app.feedback.ui.FeedbackActivity"
             android:label="@string/feedbackActivityTitle"
@@ -110,6 +111,13 @@
         <activity
             android:name="com.duckduckgo.app.bookmarks.ui.BookmarksActivity"
             android:label="@string/bookmarksActivityTitle" />
+        <activity
+            android:name=".defaultBrowsing.DefaultBrowserInfoActivity"
+            android:theme="@style/ModalCardTheme" />
+        <activity
+            android:name="com.duckduckgo.app.fire.FireActivity"
+            android:process="@string/fireProcessName"
+            android:theme="@style/SplashTheme" />
 
         <service
             android:name="com.duckduckgo.app.job.AppConfigurationJobService"
@@ -125,14 +133,6 @@
                 android:resource="@xml/search_widget_info" />
         </receiver>
 
-        <activity
-            android:name=".defaultBrowsing.DefaultBrowserInfoActivity"
-            android:theme="@style/ModalCardTheme" />
-
-        <activity
-            android:name="com.duckduckgo.app.fire.FireActivity"
-            android:process="@string/fireProcessName"
-            android:theme="@style/SplashTheme" />
     </application>
 
 </manifest>
