--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/appName"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Dark"
+        android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <meta-data
             android:name="android.webkit.WebView.MetricsOptOut"
@@ -34,7 +34,6 @@
             android:label="@string/appName">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -116,8 +115,7 @@
             android:theme="@style/ModalCardTheme" />
         <activity
             android:name="com.duckduckgo.app.fire.FireActivity"
-            android:process="@string/fireProcessName"
-            android:theme="@style/SplashTheme" />
+            android:process="@string/fireProcessName" />
 
         <service
             android:name="com.duckduckgo.app.job.AppConfigurationJobService"
