--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,6 +104,11 @@
             android:label="@string/feedbackActivityTitle"
             android:theme="@style/ModalCardTheme" />
         <activity
+            android:name="com.duckduckgo.app.feedback.ui.UserSurveyActivity"
+            android:label="@string/feedbackActivityTitle"
+            android:parentActivityName=".BrowserActivity"
+            android:theme="@style/ModalCardTheme" />
+        <activity
             android:name="com.duckduckgo.app.about.AboutDuckDuckGoActivity"
             android:label="@string/aboutActivityTitle"
             android:parentActivityName="com.duckduckgo.app.settings.SettingsActivity" />
