--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,7 @@ ext {
     rxRelay = "2.0.0"
     leakCanary = "1.6.2"
     mockito = "2.23.0"
+    mockitoKotlin = "2.0.0"
 }
 
 
@@ -165,7 +166,7 @@ dependencies {
     implementation "org.apache.commons:commons-math3:3.6.1"
 
     testImplementation "org.mockito:mockito-core:$mockito"
-    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlin"
     testImplementation "junit:junit:4.12"
 
     androidTestImplementation 'androidx.test:runner:1.1.0'
@@ -174,7 +175,8 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0"
     androidTestImplementation "org.mockito:mockito-android:$mockito"
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okHttp"
-    androidTestImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
+    androidTestImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlin"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     kapt "com.android.tools.build.jetifier:jetifier-core:$jetifier"
     annotationProcessor "com.android.tools.build.jetifier:jetifier-core:$jetifier"
