Add app friction survey (#403)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,6 +104,12 @@
             android:label="@string/feedbackActivityTitle"
             android:theme="@style/ModalCardTheme" />
         <activity
+            android:name="com.duckduckgo.app.feedback.ui.SurveyActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/surveyActivityTitle"
+            android:parentActivityName=".BrowserActivity"
+            android:theme="@style/ModalCardTheme" />
+        <activity
             android:name="com.duckduckgo.app.about.AboutDuckDuckGoActivity"
             android:label="@string/aboutActivityTitle"
             android:parentActivityName="com.duckduckgo.app.settings.SettingsActivity" />
