--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,14 +82,17 @@ ext {
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
     androidKtx = "1.0.1"
-    androidTestRunner = "1.0.2"
     constraintLayout = "2.0.0-alpha2"
     lifecycle = "2.0.0"
-    coreTesting = "2.0.0"
     room = "2.1.0-alpha03"
     workManager = "1.0.0-beta02"
+    legacySupport = "1.0.0"
+    espressoCore = "3.1.1"
+    coreTesting = "2.0.0"
+    androidTestRunner = "1.0.2"
     testRunner = "1.1.1"
 
+    junit = "4.12"
     dagger = "2.18"
     retrofit = "2.3.0"
     ankoVersion = "0.10.4"
@@ -103,11 +106,12 @@ ext {
     leakCanary = "1.6.2"
     mockito = "2.18.3"
     mockitoKotlin = "2.0.0"
+    commonsMath = "3.6.1"
 }
 
 
 dependencies {
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.legacy:legacy-support-v4:$legacySupport"
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanary"
 
@@ -165,16 +169,16 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     // Apache commons
-    implementation "org.apache.commons:commons-math3:3.6.1"
+    implementation "org.apache.commons:commons-math3:$commonsMath"
 
     testImplementation "org.mockito:mockito-core:$mockito"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlin"
-    testImplementation "junit:junit:4.12"
+    testImplementation "junit:junit:$junit"
 
     androidTestImplementation "androidx.test:runner:$testRunner"
     androidTestImplementation "androidx.test:rules:$testRunner"
     androidTestUtil "androidx.test:orchestrator:$testRunner"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.1"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCore"
     androidTestImplementation "org.mockito:mockito-android:$mockito"
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okHttp"
     androidTestImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlin"
